Just Added Custom Exceptions.